@@ -69,4 +69,5 @@ struct block_cache_stats {
 /* block_cache.c */
 extern struct s3backer_store *block_cache_create(struct block_cache_conf *config, struct s3backer_store *inner);
 extern void block_cache_get_stats(struct s3backer_store *s3b, struct block_cache_stats *stats);
+extern void block_cache_clear_stats(struct s3backer_store *s3b);
 
