@@ -41,11 +41,13 @@ struct s3backer_store;
 /* Function types */
 typedef void printer_t(void *prarg, const char *fmt, ...) __attribute__ ((__format__ (__printf__, 2, 3)));
 typedef void print_stats_t(void *prarg, printer_t *printer);
+typedef void clear_stats_t(void);
 
 /* Configuration info structure for fuse_ops */
 struct fuse_ops_conf {
     struct s3b_config       *s3bconf;
     print_stats_t           *print_stats;
+    clear_stats_t           *clear_stats;
     int                     read_only;
     int                     direct_io;
     const char              *filename;
