@@ -501,6 +501,16 @@ http_io_get_stats(struct s3backer_store *s3b, struct http_io_stats *stats)
     pthread_mutex_unlock(&priv->mutex);
 }
 
+void
+http_io_clear_stats(struct s3backer_store *s3b)
+{
+    struct http_io_private *const priv = s3b->data;
+
+    pthread_mutex_lock(&priv->mutex);
+    memset(&priv->stats, 0, sizeof(priv->stats));
+    pthread_mutex_unlock(&priv->mutex);
+}
+
 static int
 http_io_list_blocks(struct s3backer_store *s3b, block_list_func_t *callback, void *arg)
 {
