@@ -138,5 +138,6 @@ struct http_io_stats {
 /* http_io.c */
 extern struct s3backer_store *http_io_create(struct http_io_conf *config);
 extern void http_io_get_stats(struct s3backer_store *s3b, struct http_io_stats *stats);
+extern void http_io_clear_stats(struct s3backer_store *s3b);
 extern int http_io_parse_block(struct http_io_conf *config, const char *name, s3b_block_t *block_num);
 
